kubernetes/apps/kube-system/external-secrets/bitwarden/service.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.14.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-cli
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  type: ClusterIP
  ports:
  - port: 8087
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: bitwarden-cli
    app.kubernetes.io/instance: bitwarden-cli
